--- a/network/ipv6.html
+++ b/network/ipv6.html
@@ -66,22 +66,22 @@
                 
                 <h2>Ventajas de IPv6</h2>
                 <p>IPv6 ofrece varias ventajas sobre IPv4:</p>
-                <ul>
-                    <li><marcador class="resaltado8">Mayor Capacidad de Direccionamiento:</marcador> IPv6 proporciona 340 sextillones de direcciones IP únicas, lo que resuelve el agotamiento de direcciones IPv4.</li>
-                    <li><marcador class="resaltado8">Mejor Seguridad:</marcador> IPv6 incluye características de seguridad integradas, como IPsec, que eran opcionales en IPv4.</li>
-                    <li><marcador class="resaltado8">Mejor Rendimiento:</marcador> IPv6 mejora el enrutamiento y la eficiencia en la entrega de paquetes, lo que puede traducirse en un mejor rendimiento en la red.</li>
-                    <li><marcador class="resaltado8">Soporte para Multicast:</marcador> IPv6 facilita la transmisión eficiente de datos a múltiples destinos, lo que es útil para aplicaciones como la transmisión en vivo y la comunicación en grupo.</li>
-                    <li><marcador class="resaltado8">Configuración Automática de Direcciones:</marcador> IPv6 permite la configuración automática de direcciones IP sin necesidad de servidores DHCP.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ <marcador class="resaltado8">Mayor Capacidad de Direccionamiento:</marcador> IPv6 proporciona 340 sextillones de direcciones IP únicas, lo que resuelve el agotamiento de direcciones IPv4.</li>
+                    <li>∘ <marcador class="resaltado8">Mejor Seguridad:</marcador> IPv6 incluye características de seguridad integradas, como IPsec, que eran opcionales en IPv4.</li>
+                    <li>∘ <marcador class="resaltado8">Mejor Rendimiento:</marcador> IPv6 mejora el enrutamiento y la eficiencia en la entrega de paquetes, lo que puede traducirse en un mejor rendimiento en la red.</li>
+                    <li>∘ <marcador class="resaltado8">Soporte para Multicast:</marcador> IPv6 facilita la transmisión eficiente de datos a múltiples destinos, lo que es útil para aplicaciones como la transmisión en vivo y la comunicación en grupo.</li>
+                    <li>∘ <marcador class="resaltado8">Configuración Automática de Direcciones:</marcador> IPv6 permite la configuración automática de direcciones IP sin necesidad de servidores DHCP.</li>
                 </ul>
                 <h2>Tipos de Direcciones IPv6</h2>
                 <p>IPv6 incluye varios tipos de direcciones, cada una con un propósito específico:</p>
                 <ul>
                     <li><marcador class="resaltado5">Dirección IPv6 Global:</marcador> Estas direcciones son equivalentes a las direcciones IP públicas en IPv4. Son direcciones únicas y se utilizan para la comunicación en Internet. Por ejemplo: 2001:0db8:85a3:0000:0000:8a2e:0370:7334.</li>
                     <p>Las direcciones IPv6 globales se toman del espacio de direcciones IPv6 global unicast, que está definido por el RFC 4291. El espacio de direcciones IPv6 global unicast se divide en tres bloques principales:</p>
-                    <ul>
-                        <li><marcador class="resaltado8">Global Unicast Address:</marcador> Este es el tipo de dirección IPv6 utilizado para la comunicación global en Internet. El rango de direcciones IPv6 globales unicast se encuentra en el bloque 2000::/3, lo que significa que las direcciones IPv6 globales unicast comienzan con los tres bits más significativos establecidos en 001. En otras palabras, las direcciones IPv6 globales unicast tienen un formato similar a 2000:xxxx:xxxx:xxxx:xxxx:xxxx:xxxx:xxxx, donde x representa dígitos hexadecimales.</li>
-                        <li><marcador class="resaltado8">Site-Local Address:</marcador> Anteriormente, había un tipo de dirección llamado "Site-Local Address," pero ha sido obsoleto en favor de las direcciones de enlace local y global unicast. El espacio de direcciones fec0::/10 se asignaba anteriormente a las direcciones de sitio local, pero ya no se recomienda su uso.</li>
-                        <li><marcador class="resaltado8">Unique Local Address (ULA):</marcador> Estas direcciones se utilizan para comunicación dentro de un dominio específico, como una red corporativa o una red local privada. El rango para direcciones ULA es fc00::/7, y las direcciones ULA se crean típicamente con un esquema de asignación específico que garantiza su unicidad dentro del dominio.</li>
+                    <ul style="list-style-type: none;">
+                        <li>∘ <marcador class="resaltado8">Global Unicast Address:</marcador> Este es el tipo de dirección IPv6 utilizado para la comunicación global en Internet. El rango de direcciones IPv6 globales unicast se encuentra en el bloque 2000::/3, lo que significa que las direcciones IPv6 globales unicast comienzan con los tres bits más significativos establecidos en 001. En otras palabras, las direcciones IPv6 globales unicast tienen un formato similar a 2000:xxxx:xxxx:xxxx:xxxx:xxxx:xxxx:xxxx, donde x representa dígitos hexadecimales.</li>
+                        <li>∘ <marcador class="resaltado8">Site-Local Address:</marcador> Anteriormente, había un tipo de dirección llamado "Site-Local Address," pero ha sido obsoleto en favor de las direcciones de enlace local y global unicast. El espacio de direcciones fec0::/10 se asignaba anteriormente a las direcciones de sitio local, pero ya no se recomienda su uso.</li>
+                        <li>∘ <marcador class="resaltado8">Unique Local Address (ULA):</marcador> Estas direcciones se utilizan para comunicación dentro de un dominio específico, como una red corporativa o una red local privada. El rango para direcciones ULA es fc00::/7, y las direcciones ULA se crean típicamente con un esquema de asignación específico que garantiza su unicidad dentro del dominio.</li>
                     </ul>
                     <li><marcador class="resaltado5">Dirección IPv6 de Loopback:</marcador> Similar a localhost en IPv4 (127.0.0.1), ::1 es la dirección de loopback en IPv6. Se utiliza para la comunicación interna del dispositivo y siempre se refiere a sí mismo.</li>
                     <li><marcador class="resaltado5">Dirección IPv6 de Enlace Local:</marcador> Estas direcciones se utilizan para la comunicación en la red local y no se enrutan en Internet. Son equivalentes a las direcciones privadas en IPv4. Por ejemplo: fe80::1.</li>
@@ -96,15 +96,15 @@
                 </ul>
                 <h2>Header</h2>
                 <p>El encabezado IPv6, también conocido como header IPv6 en inglés, es una parte fundamental de un paquete IPv6 y contiene información esencial para el enrutamiento y el procesamiento del paquete a medida que viaja a través de la red. Aquí tienes una explicación de los campos más importantes del encabezado IPv6:</p>
-                <ul>
-                    <li><marcador class="resaltado4">Versión:</marcador> Este campo ocupa 4 bits y especifica la versión del protocolo IPv6 que se está utilizando. En IPv6, este campo siempre tiene el valor de 6.</li>
-                    <li><marcador class="resaltado4">Clase de Tráfico:</marcador> Este campo, que también utiliza 8 bits, se utiliza para indicar la clase de tráfico y puede usarse para dar prioridad a ciertos tipos de tráfico sobre otros. Junto con el campo de Flujo de Etiqueta, se puede realizar una gestión avanzada del tráfico.</li>
-                    <li><marcador class="resaltado4">Etiqueta de Flujo:</marcador> El campo de Flujo de Etiqueta ocupa 20 bits y se utiliza para identificar y etiquetar un flujo de tráfico específico. Puede ayudar a mantener conexiones de flujo único y proporcionar una calidad de servicio mejorada.</li>
-                    <li><marcador class="resaltado4">Longitud del Payload:</marcador> Este campo, de 16 bits, indica la longitud total del paquete, incluyendo el encabezado IPv6 y la carga útil (payload) que le sigue. La unidad de medida es octetos (bytes).</li>
-                    <li><marcador class="resaltado4">Siguiente Cabecera:</marcador> El campo de Siguiente Cabecera es un byte (8 bits) que indica qué tipo de información sigue después del encabezado IPv6. Puede apuntar a extensiones de encabezado, como encabezados de enrutamiento, o a protocolos de capa superior, como TCP o UDP.</li>
-                    <li><marcador class="resaltado4">Límite de Saltos:</marcador> Este campo utiliza 8 bits y es similar al campo "TTL" (Time to Live) en IPv4. Indica el número máximo de saltos o enrutadores que un paquete puede atravesar antes de ser descartado. Su propósito es evitar bucles infinitos en la red.</li>
-                    <li><marcador class="resaltado4">Dirección de Origen:</marcador> Este campo es una dirección IPv6 de 128 bits que especifica la dirección del remitente del paquete.</li>
-                    <li><marcador class="resaltado4">Dirección de Destino:</marcador> Similar al campo de Dirección de Origen, este campo es una dirección IPv6 de 128 bits que indica la dirección del destinatario del paquete.</li>
+                <ul style="list-style-type: none;">
+                    <li>🔻 <marcador class="resaltado4">Versión:</marcador> Este campo ocupa 4 bits y especifica la versión del protocolo IPv6 que se está utilizando. En IPv6, este campo siempre tiene el valor de 6.</li>
+                    <li>🔻 <marcador class="resaltado4">Clase de Tráfico:</marcador> Este campo, que también utiliza 8 bits, se utiliza para indicar la clase de tráfico y puede usarse para dar prioridad a ciertos tipos de tráfico sobre otros. Junto con el campo de Flujo de Etiqueta, se puede realizar una gestión avanzada del tráfico.</li>
+                    <li>🔻 <marcador class="resaltado4">Etiqueta de Flujo:</marcador> El campo de Flujo de Etiqueta ocupa 20 bits y se utiliza para identificar y etiquetar un flujo de tráfico específico. Puede ayudar a mantener conexiones de flujo único y proporcionar una calidad de servicio mejorada.</li>
+                    <li>🔻 <marcador class="resaltado4">Longitud del Payload:</marcador> Este campo, de 16 bits, indica la longitud total del paquete, incluyendo el encabezado IPv6 y la carga útil (payload) que le sigue. La unidad de medida es octetos (bytes).</li>
+                    <li>🔻 <marcador class="resaltado4">Siguiente Cabecera:</marcador> El campo de Siguiente Cabecera es un byte (8 bits) que indica qué tipo de información sigue después del encabezado IPv6. Puede apuntar a extensiones de encabezado, como encabezados de enrutamiento, o a protocolos de capa superior, como TCP o UDP.</li>
+                    <li>🔻 <marcador class="resaltado4">Límite de Saltos:</marcador> Este campo utiliza 8 bits y es similar al campo "TTL" (Time to Live) en IPv4. Indica el número máximo de saltos o enrutadores que un paquete puede atravesar antes de ser descartado. Su propósito es evitar bucles infinitos en la red.</li>
+                    <li>🔻 <marcador class="resaltado4">Dirección de Origen:</marcador> Este campo es una dirección IPv6 de 128 bits que especifica la dirección del remitente del paquete.</li>
+                    <li>🔻 <marcador class="resaltado4">Dirección de Destino:</marcador> Similar al campo de Dirección de Origen, este campo es una dirección IPv6 de 128 bits que indica la dirección del destinatario del paquete.</li>
                 </ul>
                 <div class="blog-image-grande">
                     <img src="media/ipv63.gif" alt="">
