--- a/network/networking.html
+++ b/network/networking.html
@@ -107,20 +107,20 @@
                 </ul>
                 <ol>
                     <li><marcador class="resaltado6">Carrier Sense (CS):</marcador></li>
-                    <ul>
-                        <li>Antes de transmitir datos, un dispositivo Ethernet escucha el medio compartido para detectar si hay alguna señal transmitida por otro dispositivo.</li>
-                        <li>Si el medio está en silencio (no hay señal detectada), el dispositivo puede iniciar su transmisión. Si detecta actividad en el medio, espera un tiempo aleatorio antes de volver a verificar el estado del canal.</li>
+                    <ul style="list-style-type: none;">
+                        <li>∘ Antes de transmitir datos, un dispositivo Ethernet escucha el medio compartido para detectar si hay alguna señal transmitida por otro dispositivo.</li>
+                        <li>∘ Si el medio está en silencio (no hay señal detectada), el dispositivo puede iniciar su transmisión. Si detecta actividad en el medio, espera un tiempo aleatorio antes de volver a verificar el estado del canal.</li>
                     </ul>
                     <li><marcador class="resaltado6">Multiple Access (MA):</marcador></li>
-                    <ul>
-                        <li>Varios dispositivos pueden intentar transmitir datos en el mismo medio compartido.</li>
-                        <li>El acceso al medio es compartido y cualquier dispositivo puede intentar transmitir en cualquier momento.</li>
+                    <ul style="list-style-type: none;">
+                        <li>∘ Varios dispositivos pueden intentar transmitir datos en el mismo medio compartido.</li>
+                        <li>∘ El acceso al medio es compartido y cualquier dispositivo puede intentar transmitir en cualquier momento.</li>
                     </ul>
                     <li><marcador class="resaltado6">Collision Detection (CD):</marcador></li>
-                    <ul>
-                        <li>Si dos dispositivos comienzan a transmitir al mismo tiempo y sus señales colisionan en el medio compartido, ambos dispositivos detectan la colisión.</li>
-                        <li>Cuando un dispositivo detecta una colisión, interrumpe su transmisión y envía una señal especial llamada jamming signal para notificar a los otros dispositivos de la colisión.</li>
-                        <li>Después de enviar la señal de jamming, los dispositivos esperan un tiempo aleatorio antes de intentar retransmitir.</li>
+                    <ul style="list-style-type: none;">
+                        <li>∘ Si dos dispositivos comienzan a transmitir al mismo tiempo y sus señales colisionan en el medio compartido, ambos dispositivos detectan la colisión.</li>
+                        <li>∘ Cuando un dispositivo detecta una colisión, interrumpe su transmisión y envía una señal especial llamada jamming signal para notificar a los otros dispositivos de la colisión.</li>
+                        <li>∘ Después de enviar la señal de jamming, los dispositivos esperan un tiempo aleatorio antes de intentar retransmitir.</li>
                     </ul>
                 </ol>
                 <div class="blog-image">
