--- a/network/vlan.html
+++ b/network/vlan.html
@@ -428,6 +428,111 @@ Switch4(config-if)# end
 Switch4# copy running-config startup-config</code></pre>
                     </div>
                 </div>
+                <h6>DTP</h6>
+                <p>DTP (Dynamic Trunking Protocol) es un protocolo utilizado para negociar automáticamente si un enlace entre dos switches será un troncal (que puede transportar tráfico de múltiples VLANs) o no. En lugar de tener que configurar manualmente los enlaces troncales, DTP permite que los switches negocien entre sí.</p>
+                <ol>
+                    <li><marcador class="resaltado8">Modo Desirable: </marcador>Cuando un switch está en este modo, intenta activamente negociar el enlace troncal. Si el otro switch está en "auto" o "desirable", la conexión será troncal.</li>
+                    <li><marcador class="resaltado8">Modo Auto: </marcador>Este modo es el modo pasivo. El switch en este modo esperará que el otro dispositivo (si está en "desirable") inicie la negociación de la troncal. Si el otro dispositivo está en "desirable" o "auto", se negociará una troncal.</li>
+                </ol>
+                <p>La conexión entre los switches se establece como troncal solo cuando ambos switches negocian y acuerdan configurar el enlace para permitir múltiples VLANs. Este proceso se facilita a través de DTP, que asegura que los enlaces adecuados se configuren sin intervención manual, lo cual es muy útil cuando hay cambios frecuentes en la infraestructura de red.</p>
+                <div class="consola">
+                    <div class="barra-superior-consola">
+                        <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
+                    </div>
+                    <div class="codigo-consola">
+                        <!-- Contenido del código -->
+<pre><code>Switch1(config)# vlan 10
+Switch1(config-vlan)# name RH
+Switch1(config-vlan)# exit
+Switch1(config)# vlan 20
+Switch1(config-vlan)# name TI
+Switch1(config-vlan)# exit
+Switch1(config)# vlan 30
+Switch1(config-vlan)# name Finanzas
+Switch1(config-vlan)# exit
+Switch1(config)# vtp mode server
+Switch1(config)# vtp domain test.com
+Switch1(config)# vtp password cisco
+Switch1(config)# interface range GigabitEthernet0/2-4
+Switch1(config-if-range)# switchport mode dynamic desirable   # DTP activado
+Switch1(config-if-range)# exit
+Switch1(config)# interface vlan 10
+Switch1(config-if)# ip address 192.168.10.1 255.255.255.0
+Switch1(config-if)# description vlan10
+Switch1(config-if)# exit
+Switch1(config)# interface vlan 20
+Switch1(config-if)# ip address 192.168.20.1 255.255.255.0
+Switch1(config-if)# description vlan20
+Switch1(config-if)# exit
+Switch1(config)# interface vlan 30
+Switch1(config-if)# ip address 192.168.30.1 255.255.255.0
+Switch1(config-if)# description vlan30
+Switch1(config-if)# exit
+Switch1(config)# ip routing
+Switch1(config-if)# end
+Switch1# copy running-config startup-config 
+
+Switch2(config)# vtp mode client
+Switch2(config)# vtp domain test.com
+Switch2(config)# vtp password cisco
+Switch2(config)# interface GigabitEthernet0/0/0
+Switch2(config-if)# switchport mode dynamic auto   # DTP activado
+Switch2(config-if)# exit
+Switch2(config)# interface GigabitEthernet0/1
+Switch2(config-if)# switchport mode access
+Switch2(config-if)# switchport access vlan 10
+Switch2(config-if)# exit
+Switch2(config)# interface GigabitEthernet0/2
+Switch2(config-if)# switchport mode access
+Switch2(config-if)# switchport access vlan 20
+Switch2(config-if)# exit
+Switch2(config)# interface GigabitEthernet0/3
+Switch2(config-if)# switchport mode access
+Switch2(config-if)# switchport access vlan 30
+Switch2(config-if)# exit
+Switch2# copy running-config startup-config
+
+Switch3(config)# vtp mode client
+Switch3(config)# vtp domain test.com
+Switch3(config)# vtp password cisco
+Switch3(config)# interface GigabitEthernet0/0/0
+Switch3(config-if)# switchport mode dynamic auto   # DTP activado
+Switch3(config-if)# exit
+Switch3(config)# interface GigabitEthernet0/1
+Switch3(config-if)# switchport mode access
+Switch3(config-if)# switchport access vlan 10
+Switch3(config-if)# exit
+Switch3(config)# interface GigabitEthernet0/2
+Switch3(config-if)# switchport mode access
+Switch3(config-if)# switchport access vlan 20
+Switch3(config-if)# exit
+Switch3(config)# interface range GigabitEthernet0/3
+Switch3(config-if)# switchport mode access
+Switch3(config-if)# switchport access vlan 30
+Switch3(config-if)# exit
+Switch3# copy running-config startup-config
+
+Switch4(config)# vtp mode client
+Switch4(config)# vtp domain test.com
+Switch4(config)# vtp password cisco
+Switch4(config)# interface GigabitEthernet0/0/0
+Switch4(config-if)# switchport mode dynamic auto   # DTP activado
+Switch4(config-if)# exit
+Switch4(config)# interface GigabitEthernet0/1
+Switch4(config-if)# switchport mode access
+Switch4(config-if)# switchport access vlan 10
+Switch4(config-if)# exit
+Switch4(config)# interface GigabitEthernet0/2
+Switch4(config-if)# switchport mode access
+Switch4(config-if)# switchport access vlan 20
+Switch4(config-if)# exit
+Switch4(config)# interface GigabitEthernet0/3
+Switch4(config-if)# switchport mode access
+Switch4(config-if)# switchport access vlan 30
+Switch4(config-if)# exit
+Switch4# copy running-config startup-config</code></pre>
+                    </div>
+                </div>
                 <h3>Huawei</h3>
                 <h6>Inter-VLAN Routing</h6>
                 <p>No es necesario configurar protocolos de enrutamiento si las VLANs están en diferentes dominios de broadcas.</p>
