--- a/network/ipv6.html
+++ b/network/ipv6.html
@@ -56,12 +56,12 @@
                 </div>
                 <p>IPv6 se diseñó teniendo en cuenta la simplicidad y la eficiencia en la notación de direcciones. Para simplificar las direcciones IPv6, se siguen algunas reglas clave:</p>
                 <ul>
-                    <li><marcador class="resaltado8">Omisiones de Ceros en Bits Más Significativos:</marcador> En un bloque de cuatro dígitos hexadecimales, si hay un cero en el bit más significativo, este solo se omite. Por ejemplo, 2001:0db8:0c01:0042 se puede simplificar como 2001:db8:c01:42.</li>
-                    <li><marcador class="resaltado8">Omisiones de Ceros en Bloques:</marcador> Puedes omitir ceros consecutivos en cualquier bloque de cuatro dígitos hexadecimales. Por ejemplo, 2001:0db8:0000:0042:0000:8a2e:0370:7334 se puede simplificar como 2001:db8:0:42:0:8a2e:370:7334.</li>
-                    <li><marcador class="resaltado8">Omisiones de Bloques de Ceros:</marcador> Puedes simplificar bloques de ceros continuos contiguos en la dirección IPv6 escribiendo ::. Sin embargo, esta omisión solo se permite una vez en una dirección IPv6. Por ejemplo, 2001:0db8:0000:0042:0000:8a2e:0370:7334 se puede simplificar como 2001:db8:0:42::8a2e:370:7334.</li>
-                    <li><marcador class="resaltado8">Notación de Cero Múltiple:</marcador> Cuando hay múltiples bloques de ceros contiguos, solo puedes usar :: para omitir un solo bloque de ceros consecutivos. Por ejemplo, 2001:0db8:0000:0000:0000:0000:0370:7334 se puede simplificar como 2001:db8::370:7334, pero no se puede simplificar aún más.</li>
-                    <li><marcador class="resaltado8">Caso Insensible:</marcador> IPv6 es insensible a mayúsculas y minúsculas, por lo que abcd y ABCD representan la misma dirección.</li>
-                    <li><marcador class="resaltado8">Prefijo de Longitud de Máscara:</marcador> A veces, las direcciones IPv6 se acompañan de un prefijo de longitud de máscara, que indica cuántos bits de la dirección están en uso. Por ejemplo, 2001:db8::/32 significa que los primeros 32 bits están en uso y el resto se pueden asignar en subredes.</li>
+                    <li><marcador class="resaltado6">Omisiones de Ceros en Bits Más Significativos:</marcador> En un bloque de cuatro dígitos hexadecimales, si hay un cero en el bit más significativo, este solo se omite. Por ejemplo, 2001:0db8:0c01:0042 se puede simplificar como 2001:db8:c01:42.</li>
+                    <li><marcador class="resaltado6">Omisiones de Ceros en Bloques:</marcador> Puedes omitir ceros consecutivos en cualquier bloque de cuatro dígitos hexadecimales. Por ejemplo, 2001:0db8:0000:0042:0000:8a2e:0370:7334 se puede simplificar como 2001:db8:0:42:0:8a2e:370:7334.</li>
+                    <li><marcador class="resaltado6">Omisiones de Bloques de Ceros:</marcador> Puedes simplificar bloques de ceros continuos contiguos en la dirección IPv6 escribiendo ::. Sin embargo, esta omisión solo se permite una vez en una dirección IPv6. Por ejemplo, 2001:0db8:0000:0042:0000:8a2e:0370:7334 se puede simplificar como 2001:db8:0:42::8a2e:370:7334.</li>
+                    <li><marcador class="resaltado6">Notación de Cero Múltiple:</marcador> Cuando hay múltiples bloques de ceros contiguos, solo puedes usar :: para omitir un solo bloque de ceros consecutivos. Por ejemplo, 2001:0db8:0000:0000:0000:0000:0370:7334 se puede simplificar como 2001:db8::370:7334, pero no se puede simplificar aún más.</li>
+                    <li><marcador class="resaltado6">Caso Insensible:</marcador> IPv6 es insensible a mayúsculas y minúsculas, por lo que abcd y ABCD representan la misma dirección.</li>
+                    <li><marcador class="resaltado6">Prefijo de Longitud de Máscara:</marcador> A veces, las direcciones IPv6 se acompañan de un prefijo de longitud de máscara, que indica cuántos bits de la dirección están en uso. Por ejemplo, 2001:db8::/32 significa que los primeros 32 bits están en uso y el resto se pueden asignar en subredes.</li>
                 </ul>
                 
                 <h2>Ventajas de IPv6</h2>
@@ -117,9 +117,9 @@
                 </ul>
                 <h2>Subneteo y Número de Direcciones</h2>
                 <p>El subneteo en IPv6 se realiza mediante la asignación de prefijos de longitud variable a las redes. El número de direcciones IPv6 en una subred depende de la longitud del prefijo. Por ejemplo:</p>
-                <ul style="list-style-type: square;">
-                    <li>Una subred con prefijo /64 permite 2^64 direcciones.</li>
-                    <li>Una subred con prefijo /48 permite 2^16 subredes, cada una con 2^64 direcciones.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ Una subred con prefijo /64 permite 2^64 direcciones.</li>
+                    <li>∘ Una subred con prefijo /48 permite 2^16 subredes, cada una con 2^64 direcciones.</li>
                 </ul>
                 <p>Cuando divides un espacio de direcciones de 48 bits en subredes internas de 64 bits cada una, obtienes 2^(16) subredes internas. Esto se debe a que tienes 48 bits totales, y al restarle 16 bits para las subredes internas, te quedan 64 bits para las direcciones dentro de cada subred interna.</p>
                 <p>Cada una de estas 2^(16) subredes internas tiene 2^(64) direcciones disponibles. Esto se debe a que, dentro de cada subred interna de 64 bits, tienes esos 64 bits para las direcciones, lo que da como resultado 2^(64) direcciones únicas en cada subred interna.</p>
